# monitorctl_client

./: CMakeLists.txt  LibNewDatatype.cpp  README.md  basic  basic.cpp  memoryUsages.cpp
src/: main.cpp  mu.c  mu.h
src/core_packs/: CMakeLists.txt
src/network_interface/: CMakeLists.txt
